--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-cmake-build-debug/**
-cmake-build-debug
+cmake-build-debug/*
+!cmake-build-debug/*.slv
+!cmake-build-debug/*.vcd
 ex1lec4slides/MultiplierAdder/Debug
 ex1lec4slides/.cproject
 ex1lec4slides/.project
