--- a/project/audioEqSolutionZ7/audioEqSolutionZ7.sdk/equalizer_our/.cproject
+++ b/project/audioEqSolutionZ7/audioEqSolutionZ7.sdk/equalizer_our/.cproject
@@ -18,7 +18,7 @@
 					<folderInfo id="xilinx.gnu.armv7.exe.debug.1645759547." name="/" resourcePath="">
 						<toolChain id="xilinx.gnu.armv7.exe.debug.toolchain.37397252" name="Xilinx ARM v7 GNU Toolchain" superClass="xilinx.gnu.armv7.exe.debug.toolchain">
 							<targetPlatform binaryParser="com.xilinx.sdk.managedbuilder.XELF.arm.a53.x32" id="xilinx.armv7.target.gnu.base.debug.562086746" isAbstract="false" name="Debug Platform" superClass="xilinx.armv7.target.gnu.base.debug"/>
-							<builder buildPath="${workspace_loc:/martinho_equalizer}/Debug" enableAutoBuild="true" id="xilinx.gnu.armv7.toolchain.builder.debug.1841042200" managedBuildOn="true" name="GNU make.Debug" superClass="xilinx.gnu.armv7.toolchain.builder.debug"/>
+							<builder buildPath="${workspace_loc:/equalizer_our}/Debug" enableAutoBuild="true" id="xilinx.gnu.armv7.toolchain.builder.debug.1841042200" managedBuildOn="true" name="GNU make.Debug" superClass="xilinx.gnu.armv7.toolchain.builder.debug"/>
 							<tool id="xilinx.gnu.armv7.c.toolchain.assembler.debug.443848666" name="ARM v7 gcc assembler" superClass="xilinx.gnu.armv7.c.toolchain.assembler.debug">
 								<inputType id="xilinx.gnu.assembler.input.708225756" superClass="xilinx.gnu.assembler.input"/>
 							</tool>
@@ -93,7 +93,7 @@
 					<folderInfo id="xilinx.gnu.armv7.exe.release.229458217." name="/" resourcePath="">
 						<toolChain id="xilinx.gnu.armv7.exe.release.toolchain.1151511270" name="Xilinx ARM v7 GNU Toolchain" superClass="xilinx.gnu.armv7.exe.release.toolchain">
 							<targetPlatform binaryParser="com.xilinx.sdk.managedbuilder.XELF.arm.a53.x32" id="xilinx.armv7.target.gnu.base.release.769986037" isAbstract="false" name="Release Platform" superClass="xilinx.armv7.target.gnu.base.release"/>
-							<builder buildPath="${workspace_loc:/martinho_equalizer}/Release" enableAutoBuild="true" id="xilinx.gnu.armv7.toolchain.builder.release.291700636" managedBuildOn="true" name="GNU make.Release" superClass="xilinx.gnu.armv7.toolchain.builder.release"/>
+							<builder buildPath="${workspace_loc:/equalizer_our}/Release" enableAutoBuild="true" id="xilinx.gnu.armv7.toolchain.builder.release.291700636" managedBuildOn="true" name="GNU make.Release" superClass="xilinx.gnu.armv7.toolchain.builder.release"/>
 							<tool id="xilinx.gnu.armv7.c.toolchain.assembler.release.1728230656" name="ARM v7 gcc assembler" superClass="xilinx.gnu.armv7.c.toolchain.assembler.release">
 								<inputType id="xilinx.gnu.assembler.input.1725799907" superClass="xilinx.gnu.assembler.input"/>
 							</tool>
@@ -154,7 +154,7 @@
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-		<project id="martinho_equalizer.xilinx.gnu.armv7.exe.799484463" name="Xilinx ARM v7 Executable" projectType="xilinx.gnu.armv7.exe"/>
+		<project id="equalizer_our.xilinx.gnu.armv7.exe.799484463" name="Xilinx ARM v7 Executable" projectType="xilinx.gnu.armv7.exe"/>
 	</storageModule>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
